style and logo update

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
 <body>
   <div class="content">
-    <img src="/api/placeholder/150/150" alt="OmniGrep Logo" class="logo">
+    <img src="assets/dalle_logo.webp" alt="OmniGrep Logo" class="logo">
     <h1>OmniGrep</h1>
-    <p class="tagline">software engineering in the <a href="https://ia.samaltman.com/" target="_blank">intelligence
+    <p class="tagline">software engineering tools for the <a href="https://ia.samaltman.com/" target="_blank">intelligence
         age</a></p>
     <div class="cta-buttons">
       <a href="https://cal.com/svineet/omnigrep-demo-call" target="_blank" class="button">Book a Demo</a>
