--- a/index.html
+++ b/index.html
@@ -347,6 +347,10 @@
         #waitlistMessage {
             margin-top: 20px;
         }
+
+        :root {
+            --accent-color: black;
+        }
     </style>
 
 <header class="site-header">
